--- a/pom.xml
+++ b/pom.xml
@@ -3,14 +3,13 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.github.goxr3plus</groupId>
+	<groupId>com.github.micheljung</groupId>
 	<artifactId>FX-BorderlessScene</artifactId>
 	<version>3.1.0</version>
 	<name>FX-BorderlessScene</name>
 	<description>Undecorated JavaFX Scene with implemented move, resize, minimise, maximise, close and Windows Aero Snap controls.</description>
-	<url>https://github.com/goxr3plus/FX-BorderlessScene</url>
+	<url>https://github.com/micheljung/FX-BorderlessScene</url>
 
-	<!-- Output to jar format -->
 	<packaging>jar</packaging>
 
 	<properties>
@@ -20,16 +19,7 @@
 	</properties>
 
 	<build>
-		<sourceDirectory>src</sourceDirectory>
-		<resources>
-			<resource>
-				<directory>resources</directory>
-			</resource>
-		</resources>
-		<!-- <testSourceDirectory>testing</testSourceDirectory> -->
 		<plugins>
-
-			<!-- Source Code Plugin -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-source-plugin</artifactId>
@@ -44,7 +34,6 @@
 				</executions>
 			</plugin>
 
-			<!-- JavaDoc Plugin -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
@@ -59,7 +48,6 @@
 				</executions>
 			</plugin>
 
-			<!--Maven Compiler Plugin -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -67,43 +55,7 @@
 				<configuration>
 					<source>1.8</source>
 					<target>1.8</target>
-					<encoding>UTF-8</encoding>
 				</configuration>
-			</plugin>
-
-			<!-- Make this jar executable -->
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-jar-plugin</artifactId>
-				<version>3.0.2</version>
-				<configuration>
-					<archive>
-						<manifest>
-							<addClasspath>true</addClasspath>
-							<mainClass>main.java.com.goxr3plus.fxborderlessscene.application.Main</mainClass>
-						</manifest>
-					</archive>
-				</configuration>
-			</plugin>
-			
-			<!-- Copy Assemply dependency -->
-			<plugin>
-				<artifactId>maven-assembly-plugin</artifactId>
-				<version>3.1.0</version>
-				<configuration>
-					<descriptors>
-						<descriptor>src/assembly/assembly.xml</descriptor>
-					</descriptors>
-				</configuration>
-				<executions>
-					<execution>
-						<id>create-archive</id>
-						<phase>package</phase>
-						<goals>
-							<goal>single</goal>
-						</goals>
-					</execution>
-				</executions>
 			</plugin>
 		</plugins>
 	</build>
