--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,11 @@
-# Compiled class file
-*.class
-
-# Log file
-*.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
+/out
+.idea/*
+!.idea/runConfigurations
 *.jar
-*.war
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
-/target/
+.gradle
+/build
+gradle-app.setting
 
-\.idea/
+!gradle-wrapper.jar
 
-*.iml
-*.DS_Store
