--- a/build.gradle
+++ b/build.gradle
@@ -77,8 +77,8 @@ publishing {
         url = 'https://github.com/micheljung/fxstage'
         licenses {
           license {
-            name = 'GNU General Public License, Version 3.0'
-            url = 'https://www.gnu.org/licenses/gpl-3.0.html'
+            name = 'MIT'
+            url = 'https://mit-license.org/'
           }
         }
         developers {
